tests/positive/Test27.sp
(***** Testing if else ******* )
max:Int(a:Int, b:Int) {
	if true    && false || true  {
		return b;
	(* TESTE *)
	} else {
		return a; 
	}
	return a;
}
