tests/negative/Test1.sp
(* Testing multiple returns *)
return a;
return b;